Etar: Make it work with Android 12 SDK again
Change-Id: Ia7b944033475be7a217b58238f2527be25b8c5ad